Add Brand api controller

--- a/src/UdaStore.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/UdaStore.WebApp/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - UdaStore.WebApp</title>
+    <title>@ViewData["Title"] - Quản lý hệ thống cửa hàng online Uda Store</title>
     <base href="~/" />
 
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
