Building catalog module.

--- a/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -34,6 +34,8 @@
                     <li><a routerLink="/brands"><i class="fa fa-circle-o"></i> Nhãn hiệu</a></li>
                     <li><a routerLink="/product-options"><i class="fa fa-circle-o"></i> Tùy chọn sản phẩm</a></li>
                     <li><a routerLink="/product-attribute-group"><i class="fa fa-circle-o"></i> Nhóm thuộc tính sản phẩm</a></li>
+                    <li><a routerLink="/product-attributes"><i class="fa fa-circle-o"></i> Đặc tính của sản phẩm</a></li>
+                    <li><a routerLink="/product-templates"><i class="fa fa-circle-o"></i> Mẫu sản phẩm</a></li>
                 </ul>
             </li>
 
