--- a/src/UdaStore.Web/Views/Shared/_Layout.cshtml
+++ b/src/UdaStore.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="~/bower_components/font-awesome/css/font-awesome.min.css">
 
+    <link rel="stylesheet" href="~/bower_components/select2/dist/css/select2.min.css">
+
     <!-- Ionicons -->
     <link rel="stylesheet" href="~/bower_components/ionicons/css/ionicons.min.css">
     <!-- Theme style -->
@@ -32,6 +34,7 @@
 <!-- ./wrapper -->
 <!-- jQuery 3 -->
 <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
+
 <!-- jQuery UI 1.11.4 -->
 <script src="~/bower_components/jquery-ui/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -39,6 +42,7 @@
     $.widget.bridge('uibutton', $.ui.button);
 </script>
 <!-- Bootstrap 3.3.7 -->
+
 <script src="~/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <!-- AdminLTE App -->
