--- a/src/UdaStore.Web/ClientApp/app/components/catalog/brand/brand.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/catalog/brand/brand.component.html
@@ -14,14 +14,13 @@
                 <data-table id="brands-grid"
                 headerTitle="Nhãn hiệu"
                 [items]="items"
-                [itemCount]="brandCount"
-                (reload)="reloadBrands($event)"
+                [itemCount]="itemCount"
+                (reload)="reload($event)"
         
                 [limit]="10"
                 [sortBy]="'rating'"
                 [sortAsc]="false"
         
-                [selectColumn]="true"
                 [multiSelect]="true"
                 [substituteRows]="false"
                 [expandableRows]="true"
@@ -43,8 +42,7 @@
                     [sortable]="true">
 
                     <ng-template #dataTableCell let-item="item">
-                        <i *ngIf="item.isPublished" class="fa fa-check-square text-success"></i>
-                        <i *ngIf="!item.isPublished" class="fa fa-times text-danger"></i>
+                        <i class="fa" [ngClass]="{'fa-check-square-o text-success': item.isPublished, 'fa-times text-danger': !item.isPublished}"></i>                       
                      </ng-template>
                 </data-table-column>
                 <data-table-column
@@ -65,14 +63,6 @@
                     </ng-template>
                 </data-table-column>
             </data-table>
-            <div style="margin-top: 10px">
-                <b>Nhãn hiệu đã chọn: <i *ngIf="brandsTable.selectedRows.length > 0" class="btn btn-danger btn-xs">Xóa dòng đã chọn</i></b>
-                <span *ngIf="brandsTable.selectedRows.length === 0"><i>Chưa có nhãn hiệu nào được chọn</i></span>
-                
-                <div *ngFor="let selected of brandsTable.selectedRows">
-                    <span [textContent]="selected.item.name"></span>
-                </div>
-            </div>
             </div>
           </div>
     </div>
