--- a/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -32,6 +32,8 @@
                 </a>
                 <ul class="treeview-menu">
                     <li><a routerLink="/brands"><i class="fa fa-circle-o"></i> Nhãn hiệu</a></li>
+                    <li><a routerLink="/products"><i class="fa fa-circle-o"></i> Sản phẩm</a></li>
+                    <li><a routerLink="/categories"><i class="fa fa-circle-o"></i> Danh mục sản phẩm</a></li>
                     <li><a routerLink="/product-options"><i class="fa fa-circle-o"></i> Tùy chọn sản phẩm</a></li>
                     <li><a routerLink="/product-attribute-group"><i class="fa fa-circle-o"></i> Nhóm thuộc tính sản phẩm</a></li>
                     <li><a routerLink="/product-attributes"><i class="fa fa-circle-o"></i> Đặc tính của sản phẩm</a></li>
