#product single file

--- a/src/UdaStore.Web/ClientApp/app/components/catalog/product-attributes/product-attributes.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/catalog/product-attributes/product-attributes.component.html
@@ -53,6 +53,7 @@
                     </ng-template>
                 </data-table-column>
             </data-table>
+            <app-loading [items]="items"></app-loading>
             </div>
           </div>
     </div>
