--- a/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -10,34 +10,62 @@
 
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu" data-widget="tree">
-            <li class="active treeview">
+            <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-dashboard"></i> <span>Trang</span>
+                    <i class="fa fa-laptop"></i>
+                    <span>Site</span>
                     <span class="pull-right-container">
                         <i class="fa fa-angle-left pull-right"></i>
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                    <li>
+                        <a routerLink="/users">
+                            <i class="fa fa-circle-o"></i> Người dùng</a>
+                    </li>
+                    <li>
+                        <a routerLink="/vendors">
+                            <i class="fa fa-circle-o"></i> Người bán</a>
+                    </li>
                 </ul>
             </li>
             <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-laptop"></i>
+                    <i class="fa fa-product-hunt"></i>
                     <span>Quản lý sản phẩm</span>
                     <span class="pull-right-container">
                         <i class="fa fa-angle-left pull-right"></i>
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a routerLink="/brands"><i class="fa fa-circle-o"></i> Nhãn hiệu</a></li>
-                    <li><a routerLink="/products"><i class="fa fa-circle-o"></i> Sản phẩm</a></li>
-                    <li><a routerLink="/categories"><i class="fa fa-circle-o"></i> Danh mục sản phẩm</a></li>
-                    <li><a routerLink="/product-options"><i class="fa fa-circle-o"></i> Tùy chọn sản phẩm</a></li>
-                    <li><a routerLink="/product-attribute-group"><i class="fa fa-circle-o"></i> Nhóm thuộc tính sản phẩm</a></li>
-                    <li><a routerLink="/product-attributes"><i class="fa fa-circle-o"></i> Đặc tính của sản phẩm</a></li>
-                    <li><a routerLink="/product-templates"><i class="fa fa-circle-o"></i> Mẫu sản phẩm</a></li>
+                    <li>
+                        <a routerLink="/brands">
+                            <i class="fa fa-circle-o"></i> Nhãn hiệu</a>
+                    </li>
+                    <li>
+                        <a routerLink="/products">
+                            <i class="fa fa-circle-o"></i> Sản phẩm</a>
+                    </li>
+                    <li>
+                        <a routerLink="/categories">
+                            <i class="fa fa-circle-o"></i> Danh mục sản phẩm</a>
+                    </li>
+                    <li>
+                        <a routerLink="/product-options">
+                            <i class="fa fa-circle-o"></i> Tùy chọn sản phẩm</a>
+                    </li>
+                    <li>
+                        <a routerLink="/product-attribute-group">
+                            <i class="fa fa-circle-o"></i> Nhóm thuộc tính sản phẩm</a>
+                    </li>
+                    <li>
+                        <a routerLink="/product-attributes">
+                            <i class="fa fa-circle-o"></i> Đặc tính của sản phẩm</a>
+                    </li>
+                    <li>
+                        <a routerLink="/product-templates">
+                            <i class="fa fa-circle-o"></i> Mẫu sản phẩm</a>
+                    </li>
                 </ul>
             </li>
 
