--- a/src/UdaStore.Web/ClientApp/app/components/catalog/brand/brand.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/catalog/brand/brand.component.html
@@ -63,6 +63,7 @@
                     </ng-template>
                 </data-table-column>
             </data-table>
+            <app-loading [items]="items"></app-loading>
             </div>
           </div>
     </div>
