--- a/src/UdaStore.Web/ClientApp/app/components/catalog/product-attribute-group/product-attribute-group.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/catalog/product-attribute-group/product-attribute-group.component.html
@@ -47,6 +47,7 @@
                       </ng-template>
                   </data-table-column>
               </data-table>
+              <app-loading [items]="items"></app-loading>
               </div>
             </div>
       </div>
