--- a/src/UdaStore.Web/ClientApp/app/components/catalog/product/product.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/catalog/product/product.component.html
@@ -1,1 +1,113 @@
-<input type="file" #fileInput (change)="upload()">
+<div class="row">
+        <div class="col-md-12">
+              <div class="box box-primary">
+                  <div class="box-body">
+                          <p>
+                             <a routerLink="/products/new" class="btn btn-primary">Thêm mới</a>
+                          </p>
+                          <p>
+                              <input 
+                                  #query
+                                  (keyup)="filter(query.value)"
+                                  type="text" class="form-control" placeholder="Nhập từ khóa để tìm...">
+                           </p>
+                      <data-table id="brands-grid"
+                      headerTitle="Danh mục sản phẩm"
+                      [items]="items"
+                      [itemCount]="itemCount"
+                      (reload)="reload($event)"
+              
+                      [limit]="10"
+                      [sortBy]="'rating'"
+                      [sortAsc]="false"
+              
+                      [multiSelect]="true"
+                      [substituteRows]="false"
+                      [expandableRows]="true"
+                      [translations]="translations"
+                      [indexColumnHeader]="'#'"
+                      [selectOnRowClick]="false"
+                      >
+                      <ng-template #dataTableExpand let-item="item">
+                          <div [textContent]="item.shortDescription" style="padding: 5px; color: gray"></div>
+                      </ng-template>
+      
+                      <data-table-column
+                          [property]="'name'"
+                          [header]="'Tên'"
+                          [sortable]="true">
+                      </data-table-column>
+                      <data-table-column
+                          [property]="'hasOptions'"
+                          [header]="'Tùy chọn'"
+                          [sortable]="true">
+      
+                          <ng-template #dataTableCell let-item="item">
+                              <i class="fa" [ngClass]="{'fa-check-square-o text-success': item.hasOptions, 'fa-times text-danger': !item.hasOptions}"></i>                       
+                          </ng-template>
+                      </data-table-column>
+                      <data-table-column
+                          [property]="'isVisibleIndividually'"
+                          [header]="'Hiển thị riêng lẻ'"
+                          [sortable]="true">
+
+                          <ng-template #dataTableCell let-item="item">
+                            <i class="fa" [ngClass]="{'fa-check-square-o text-success': item.isVisibleIndividually, 'fa-times text-danger': !item.isVisibleIndividually}"></i>                       
+                         </ng-template>
+                      </data-table-column>
+                      <data-table-column
+                          [property]="'isFeatured'"
+                          [header]="'Nổi bật'"
+                          [sortable]="true">
+      
+                          <ng-template #dataTableCell let-item="item">
+                              <i class="fa" [ngClass]="{'fa-check-square-o text-success': item.isFeatured, 'fa-times text-danger': !item.isFeatured}"></i>                       
+                           </ng-template>
+                      </data-table-column>
+                      <data-table-column
+                            [property]="'isAllowToOrder'"
+                            [header]="'Cho phép đặt hàng'"
+                            [sortable]="true">
+        
+                            <ng-template #dataTableCell let-item="item">
+                                <i class="fa" [ngClass]="{'fa-check-square-o text-success': item.isAllowToOrder, 'fa-times text-danger': !item.isAllowToOrder}"></i>                       
+                            </ng-template>
+                        </data-table-column>
+                        <data-table-column
+                            [property]="'stockQuantity'"
+                            [header]="'Số tồn kho'"
+                            [sortable]="true">  
+                            
+                        </data-table-column>
+                        <data-table-column
+                            [property]="'isPublished'"
+                            [header]="'Công bố'"
+                            [sortable]="true">
+        
+                            <ng-template #dataTableCell let-item="item">
+                                <i class="fa" [ngClass]="{'fa-check-square-o text-success': item.isPublished, 'fa-times text-danger': !item.isPublished}"></i>                       
+                            </ng-template>
+                        </data-table-column>                        
+                      <data-table-column
+                          [property]="'id'"  
+                          [header]="'Thao tác'"
+                      >
+                          <ng-template #dataTableCell let-item="item">
+                              <a class="btn btn-info btn-xs" [routerLink]="['/products/', item.id]">
+                                  <i class="fa fa-edit"></i>
+                              </a>
+                              <a class="btn btn-danger btn-xs" (click)="delete(item.id)">
+                                  <i class="fa fa-trash"></i>
+                              </a>
+                              <a class="btn btn-warning btn-xs" (click)="isPublishedToggle(item.id)">
+                                  <i *ngIf="!item.isPublished" title="Công bố" class="fa fa-play text-success"></i>
+                                  <i *ngIf="item.isPublished" title="Ngưng công bố" class="fa fa-pause text-danger"></i>
+                              </a>
+                          </ng-template>
+                      </data-table-column>
+                  </data-table>
+                   <app-loading [items]="items"></app-loading>                 
+                  </div>
+                </div>
+          </div>
+      </div>
