--- a/src/UdaStore.Web/ClientApp/app/components/catalog/product/product-form/product-form.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/catalog/product/product-form/product-form.component.html
@@ -28,7 +28,7 @@
             <div class="tab-content">
               <div class="tab-pane active fade in" id="general">
                 <div class="row">
-                  <div class="col-md-8">
+                  <div class="col-md-10">
                     <div class="box-header with-border">
                       <h3 class="box-title">Cơ bản</h3>
                     </div>
@@ -134,21 +134,42 @@
                             <img [src]="productForm.product.thumbnailImageUrl" *ngIf="productForm.product.thumbnailImageUrl" style="width: 80px; height: 90px; margin-top: 7px;">
                           </div>
                         </div>
-
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Hình sản phẩm</label>
                           <div class="col-sm-10">
-                            <input class="form-control" type="file" [(ngModel)]="productForm.product.productImages" multiple="true" multiple name="productImages"
-                              #productImages (change)="changeImages()" accept="'image/*'">
-
+                            <input class="form-control" type="file" multiple name="productImages"
+                              #productImages (change)="imageChange($event)" accept="'image/*'">
+                              
+                              <div style="margin-top: 5px;">
+                                  <span class="product-image-edit" *ngFor="let media of productForm.product.productImages">
+                                      <img src="{{ media.mediaUrl }}">
+                                      <button class="btn-delete" type="button" (click)="deleteImages(media)" 
+                                       aria-label="Remove">
+                                          <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+                                      </button>
+                                    </span>
+                              </div>                             
                           </div>
                         </div>
 
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Tài liệu kỹ thuật</label>
                           <div class="col-sm-10">
-                            <input name="productDocuments" class="form-control" type="file" [(ngModel)]="productForm.product.productDocuments" multiple
-                              name="productDocuments" accept="'.pdf,.doc'">
+                            <input name="productDocuments" class="form-control" #productDocuments (change)="docChange($event)"
+                                   type="file" multiple name="productDocuments" accept="'.pdf,.docx'">
+                            
+                            <div style="margin-top: 5px; ">
+                                <span style="border: 1px solid #ccc; padding: 5px;margin-right: 5px;" *ngFor="let doc of productForm.product.productDocuments">
+                                    <a target="_blank" href="{{doc.mediaUrl}}">{{doc.caption}}</a>
+                                    <button type="button" (click)="deleteDocs(doc)" class="btn btn-link" aria-label="Remove">
+                                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                    </button>
+                                  </span>
+                                  
+                                  <span style="margin-top: 6px;" class="product-file-edit" *ngFor="let name of fileNames">
+                                      <span class="docs-style">{{name}}</span>
+                                  </span>
+                            </div>
                           </div>
                         </div>
 
@@ -191,7 +212,7 @@
                     </div>
 
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-2">
                     <div class="box-header with-border">
                       <h3 class="box-title">Danh mục</h3>
                     </div>
@@ -357,7 +378,7 @@
               </div>
 
               <div class="tab-pane fade" id="related">
-
+                
               </div>
 
               <div class="tab-pane fade" id="cross-sell">
