#Widget(Core Module) + Cms Module

--- a/src/UdaStore.Web/ClientApp/app/components/app/app.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/app/app.component.html
@@ -67,6 +67,7 @@
         <!-- Main content -->
         <section class="content">
             <ng2-toasty [position]="'top-right'"></ng2-toasty>
+            <ngx-loading-bar></ngx-loading-bar>
             <router-outlet></router-outlet>
         </section>
         <!-- /.content -->
