--- a/src/UdaStore.Web/ClientApp/app/components/catalog/brand/brand-form/brand-form.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/catalog/brand/brand-form/brand-form.component.html
@@ -29,8 +29,8 @@
           <div class="checkbox">
               <label>
                 <input name="isPublished" [(ngModel)]="brand.isPublished" type="checkbox"> 
-                <strong *ngIf="brand.isPublished">Công bố</strong>
-                <strong *ngIf="!brand.isPublished">Không công bố</strong>
+                <strong *ngIf="!brand.isPublished">Công bố</strong>
+                <strong *ngIf="brand.isPublished">Không công bố</strong>
               </label>
             </div>
 
