--- a/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/UdaStore.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -68,7 +68,40 @@
                     </li>
                 </ul>
             </li>
-
+            <li class="treeview">
+                <a href="#">
+                    <i class="fa fa-pencil"></i>
+                    <span>Quản trị Nội dung</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a routerLink="/pages">
+                            <i class="fa fa-circle-o"></i> Quản lý Trang</a>
+                    </li>
+                    <li>
+                        <a routerLink="/widgets">
+                            <i class="fa fa-circle-o"></i> Quản lý Widget</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="treeview">
+                <a href="#">
+                    <i class="fa fa-cogs"></i>
+                    <span>Hệ Thống</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a routerLink="/settings">
+                            <i class="fa fa-circle-o"></i> Cài đặt</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </section>
     <!-- /.sidebar -->
